--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ pandas
 numpy
 seaborn
 matplotlib
-scikit-learn
-#catboost
-#xgboost
-#dill
+Scikit-Learn==1.0.2
+xgboost
+dill
 Flask
-#gunicorn
+gunicorn
+Flask-Cors==3.0.8
+mysql-connector-python
 #-e .
